Agregado de IDs a selects en ABMs

--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -66,28 +66,28 @@
           <div class="col-md-4">
             <!-- Seleccion de Catedra -->
             <label>Catedra</label>
-            <select class="catedra">
+            <select class="catedra" id="catedra_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Carrera -->
             <label>Carrera</label>
-            <select class="carrera">
+            <select class="carrera" id="carrera_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Materia -->
             <label>Materia</label>
-            <select class="materia">
+            <select class="materia" id="materia_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Horario -->
             <label>Horario</label>
-            <select class="horario">
+            <select class="horario" id="horario_alta">
               <option value="0">7:00hs</option>
               <option value="1">8:00hs</option>
               <option value="2">9:00hs</option>
@@ -109,7 +109,7 @@
           <div class="col-md-4">
             <!-- Seleccion de Alumno -->
             <label>Alumno</label>
-            <select class="alumnos">
+            <select class="alumnos" id="alumnos_alta">
               <option></option>
             </select>
           </div>
@@ -133,28 +133,28 @@
             <div class="col-md-4">
               <!-- Seleccion de Catedra -->
               <label>Catedra</label>
-              <select class="catedra">
+              <select class="catedra" id="catedra_baja">
             <option></option>
           </select>
         </div>
         <div class="col-md-4">
           <!-- Seleccion de Carrera -->
           <label>Carrera</label>
-          <select class="carrera">
+          <select class="carrera" id="carrera_baja">
             <option></option>
           </select>
         </div>
         <div class="col-md-4">
           <!-- Seleccion de Materia -->
           <label>Materia</label>
-          <select class="materia">
+          <select class="materia" id="materia_baja">
             <option></option>
           </select>
         </div>
         <div class="col-md-4">
           <!-- Seleccion de Horario -->
           <label>Horario</label>
-          <select class="horario">
+          <select class="horario" id="horario_baja">
             <option value="0">7:00hs</option>
             <option value="1">8:00hs</option>
             <option value="2">9:00hs</option>
@@ -176,7 +176,7 @@
         <div class="col-md-4">
           <!-- Seleccion de Alumno -->
           <label>Alumno</label>
-          <select class="alumnos">
+          <select class="alumnos" id="alumno_baja">
             <option></option>
           </select>
         </div>
@@ -193,28 +193,28 @@
         <div class="col-md-4">
           <!-- Seleccion de Catedra -->
           <label>Catedra</label>
-          <select class="catedra">
+          <select class="catedra" id="catedra_modificacion">
             <option></option>
           </select>
         </div>
         <div class="col-md-4">
           <!-- Seleccion de Carrera -->
           <label>Carrera</label>
-          <select class="carrera">
+          <select class="carrera" id="carrera_modificacion">
             <option></option>
           </select>
         </div>
         <div class="col-md-4">
           <!-- Seleccion de Materia -->
           <label>Materia</label>
-          <select class="materia">
+          <select class="materia" id="materia_modificacion">
             <option></option>
           </select>
         </div>
         <div class="col-md-4">
           <!-- Seleccion de Horario -->
           <label>Horario</label>
-          <select class="horario">
+          <select class="horario" id="horario_modificacion">
             <option value="0">7:00hs</option>
             <option value="1">8:00hs</option>
             <option value="2">9:00hs</option>
@@ -236,7 +236,7 @@
         <div class="col-md-4">
           <!-- Seleccion de Alumno -->
           <label>Alumno</label>
-          <select class="alumnos">
+          <select class="alumnos" id="alumnos_modificacion">
             <option></option>
           </select>
         </div>
