--- a/html/abmMaterias.html
+++ b/html/abmMaterias.html
@@ -66,14 +66,14 @@
           <div class="col-md-4">
             <!-- Seleccion de Catedras -->
             <label>Catedra</label>
-            <select class="catedra">
+            <select class="catedra" id="catedra_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Carrera -->
             <label>Carrera</label>
-            <select class="carrera">
+            <select class="carrera" id="carrera_alta">
               <option></option>
             </select>
           </div>
@@ -96,7 +96,7 @@
         <div class="col-md-4">
           <!-- Input de Materia -->
           <label>Materia</label>
-          <select class="materia">
+          <select class="materia" id="materia_baja">
             <option></option>
           </select>
         </div>
@@ -114,7 +114,7 @@
           <div class="col-md-4">
             <!-- Select de Materia -->
             <label>Materia</label>
-            <select class="materia">
+            <select class="materia" id="materia_modificacion">
               <option></option>
             </select>
           </div>
