--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -66,28 +66,28 @@
                 <div class="col-md-3">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
-                    <select class="catedra">
+                    <select class="catedra" id="catedra_alta">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label>Materia</label>
                     <!-- Seleccion de Materia -->
-                    <select class="materia">
+                    <select class="materia" id="materia_alta">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label>Alumno</label>
                     <!-- Seleccion de Alumno -->
-                    <select class="alumnos">
+                    <select class="alumnos" id="alumnos_alta">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label>Nota</label>
                     <!-- Seleccion de Nota -->
-                    <select class="nota">
+                    <select class="nota" id="nota_alta">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -113,21 +113,21 @@
                 <div class="col-md-4">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
-                    <select class="catedra">
+                    <select class="catedra" id="catedra_baja">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <label>Materia</label>
                     <!-- Seleccion de Materia -->
-                    <select class="materia">
+                    <select class="materia" id="materia_baja">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <label>Alumno</label>
                     <!-- Seleccion de Alumno -->
-                    <select class="alumnos">
+                    <select class="alumnos" id="alumnos_baja">
                         <option></option>
                     </select>
                 </div>
@@ -144,28 +144,28 @@
                 <div class="col-md-3">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
-                    <select class="catedra">
+                    <select class="catedra" id="catedra_modificacion">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label>Materia</label>
                     <!-- Seleccion de Materia -->
-                    <select class="materia">
+                    <select class="materia" id="materia_modificacion">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label>Alumno</label>
                     <!-- Seleccion de Alumno -->
-                    <select class="alumnos">
+                    <select class="alumnos" id="alumnos_modificacion">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label>Nota</label>
                     <!-- Seleccion de Nota -->
-                    <select class="nota">
+                    <select class="nota" id="nota_modificacion">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
