--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -61,7 +61,7 @@
                     <div>
                         <!-- Seleccion de Rol -->
                         <label>Rol</label>
-                        <select class="rol">
+                        <select class="rol" id="rol_alta">
                             <option value="administrador">Administrador</option>
                             <option value="alumno">Alumno</option>
                             <option value="profesor">Profesor</option>
@@ -90,7 +90,7 @@
                     <div>
                         <!-- Seleccion de Documento -->
                         <label>Genero</label>
-                        <select class="genero">
+                        <select class="genero" id="genero_alta">
                             <option value="masculino">Masculino</option>
                             <option value="femenino">Femenino</option>
                         </select>
@@ -161,13 +161,13 @@
                         <div>
                             <!-- Input de Mail -->
                             <label>Mail</label>
-                            <select class="mail">
+                            <select class="mail" id="mail_modificacion">
                                 <option></option>
                             </select>
                         </div>
                         <!-- Seleccion de Rol -->
                         <label>Rol</label>
-                        <select class="rol">
+                        <select class="rol" id="rol_modificacion">
                             <option value="administrador">Administrador</option>
                             <option value="alumno">Alumno</option>
                             <option value="profesor">Profesor</option>
@@ -196,7 +196,7 @@
                     <div>
                         <!-- Seleccion de Documento -->
                         <label>Genero</label>
-                        <select class="genero">
+                        <select class="genero" id="genero_modificacion">
                             <option value="masculino">Masculino</option>
                             <option value="femenino">Femenino</option>
                         </select>
