--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -69,7 +69,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de materia -->
                         <label>Materia</label>
-                        <select class="materia">
+                        <select class="materia" id="materia_alta">
                             <option></option>
                         </select>
                     </div>
@@ -90,7 +90,7 @@
                     <div class="col-md-12">
                         <!-- Seleccion de dias -->
                         <label>Dias</label>
-                        <select class="dia">
+                        <select class="dia" id="dia_alta">
                             <option value="0">Lunes</option>
                             <option value="1">Martes</option>
                             <option value="2">Miercoles</option>
@@ -102,7 +102,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de inicio de horario -->
                         <label>Inicio</label>
-                        <select class="hora_inicio">
+                        <select class="hora_inicio" id="hora_inicio_alta">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -124,7 +124,7 @@
                     <div class="col-md-4">
                         <label>Fin</label>
                         <!-- Seleccion de fin de horario -->
-                        <select class="hora_fin">
+                        <select class="hora_fin" id="hora_fin_alta">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -157,14 +157,14 @@
                 <div class="col-md-4">
                     <!-- Seleccion de Catedras -->
                     <label>Catedras</label>
-                    <select class="catedra">
+                    <select class="catedra" id="catedra_baja">
                         <option></option>
                     </select>
                 </div>
                 <div class="col-md-4">
                     <!-- Seleccion de materia -->
                     <label>Materia</label>
-                    <select class="materia">
+                    <select class="materia" id="materia_baja">
                         <option></option>
                     </select>
                 </div>
@@ -181,14 +181,14 @@
                     <div class="col-md-4">
                         <!-- Seleccion de Catedras -->
                         <label>Catedras</label>
-                        <select class="catedra">
+                        <select class="catedra" id="catedra_modificacion">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-4">
                         <!-- Seleccion de materia -->
                         <label>Materia</label>
-                        <select class="materia">
+                        <select class="materia" id="materia_modificacion">
                             <option></option>
                         </select>
                     </div>
@@ -209,7 +209,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de dias -->
                         <label>Dias</label>
-                        <select class="dia">
+                        <select class="dia" id="dia_modificacion">
                             <option value="0">Lunes</option>
                             <option value="1">Martes</option>
                             <option value="2">Miercoles</option>
@@ -221,7 +221,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de inicio de horario -->
                         <label>Inicio</label>
-                        <select class="hora_inicio">
+                        <select class="hora_inicio" id="hora_inicio_modificacion">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -243,7 +243,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de fin de horario -->
                         <label>Fin</label>
-                        <select class="hora_fin">
+                        <select class="hora_fin" id="hora_fin_modificacion">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
