--- a/html/abmMaterias.html
+++ b/html/abmMaterias.html
@@ -120,7 +120,7 @@
           </div>
           <div class="col-md-6">
             <!-- Input de Materia -->
-            <label>Nuevo Nombre Materia <input type="text" id="materia"></label>
+            <label>Nuevo Nombre Materia <input type="text" id="nueva_materia"></label>
           </div>
         </div>
       </div>
