--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ABM Notas</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
     <link rel="stylesheet" href="../css/abms.css">
     <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -188,8 +188,15 @@
     <script src="../js/login.js"></script>
     <script src="../js/library.js"></script>
     <script src="../js/common.js"></script>
-    
-    
+    <script>
+        function myFunction() {
+            var rc = new RegisterControllerRemote;
+            var operacion = $("#operacion").val();
+            var json = rc.armarJson("notas", operacion);
+            console.log(json);
+        }
+    </script>
+
     <!-- Poblar select para modificacion y baja de datos -->
     <script>
         $(document).ready(function () {
