Agregada onclick button submit

--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -251,7 +251,7 @@
   </div>
   <!-- Botoon para guardar datos -->
   <input id="operacion" type="text" style="display:none;">
-  <button id="submit" type="submit">Guardar</button>
+  <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
   <input style="display: none;" type="text" id="presente">
   <script src="../js/register.js"></script>
   <script src="../js/login.js"></script>
