--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -183,7 +183,7 @@
     </div>
     <!-- Botoon para guardar datos -->
     <input id="operacion" type="text" style="display:none;">
-    <button id="submit" type="submit">Guardar</button>
+    <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
     <script src="../js/register.js"></script>
     <script src="../js/login.js"></script>
     <script src="../js/library.js"></script>
