--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -227,7 +227,7 @@
     </form>
     <!-- Boton para guardar datos -->
     <input id="operacion" type="text" style="display:none;">
-    <button id="submit" type="submit">Guardar</button>
+    <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
     <script>
         function myFunction() {
             var rc = new RegisterControllerRemote;
