ABM notas y Fichadas corregidos

--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -85,6 +85,18 @@
             </select>
           </div>
           <div class="col-md-4">
+            <!-- Seleccion de dias -->
+            <label>Dias</label>
+            <select class="dia" id="dia_alta">
+                <option value="0">Lunes</option>
+                <option value="1">Martes</option>
+                <option value="2">Miercoles</option>
+                <option value="3">Jueves</option>
+                <option value="4">Viernes</option>
+                <option value="5">Sabado</option>
+            </select>
+        </div>
+          <div class="col-md-4">
             <!-- Seleccion de Horario -->
             <label>Horario</label>
             <select class="horario" id="horario_alta">
@@ -152,6 +164,18 @@
           </select>
         </div>
         <div class="col-md-4">
+          <!-- Seleccion de dias -->
+          <label>Dias</label>
+          <select class="dia" id="dia_baja">
+              <option value="0">Lunes</option>
+              <option value="1">Martes</option>
+              <option value="2">Miercoles</option>
+              <option value="3">Jueves</option>
+              <option value="4">Viernes</option>
+              <option value="5">Sabado</option>
+          </select>
+      </div>
+        <div class="col-md-4">
           <!-- Seleccion de Horario -->
           <label>Horario</label>
           <select class="horario" id="horario_baja">
@@ -211,6 +235,18 @@
             <option></option>
           </select>
         </div>
+        <div class="col-md-4">
+          <!-- Seleccion de dias -->
+          <label>Dias</label>
+          <select class="dia" id="dia_modificacion">
+              <option value="0">Lunes</option>
+              <option value="1">Martes</option>
+              <option value="2">Miercoles</option>
+              <option value="3">Jueves</option>
+              <option value="4">Viernes</option>
+              <option value="5">Sabado</option>
+          </select>
+      </div>
         <div class="col-md-4">
           <!-- Seleccion de Horario -->
           <label>Horario</label>
