--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -63,6 +63,13 @@
         <br>
         <div class="container">
             <div class="row">
+                <div class="col-md-4">
+                    <!-- Seleccion de Carrera -->
+                    <label>Carrera</label>
+                    <select class="carrera" id="carrera_alta">
+                        <option></option>
+                    </select>
+                </div>
                 <div class="col-md-3">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
@@ -111,6 +118,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
+                    <!-- Seleccion de Carrera -->
+                    <label>Carrera</label>
+                    <select class="carrera" id="carrera_baja">
+                        <option></option>
+                    </select>
+                </div>
+                <div class="col-md-4">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
                     <select class="catedra" id="catedra_baja">
@@ -141,6 +155,13 @@
         <br>
         <div class="container">
             <div class="row">
+                <div class="col-md-4">
+                    <!-- Seleccion de Carrera -->
+                    <label>Carrera</label>
+                    <select class="carrera" id="carrera_modificacion">
+                        <option></option>
+                    </select>
+                </div>
                 <div class="col-md-3">
                     <!-- Seleccion de Catedra -->
                     <label>Catedra</label>
