--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -64,7 +64,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de catedra -->
                         <label>Catedra</label>
-                        <input type="text" id="catedra">
+                        <input type="text" id="catedra_alta">
                     </div>
                     <div class="col-md-4">
                         <!-- Seleccion de materia -->
@@ -76,12 +76,12 @@
                     <div class="col-md-4">
                         <!-- Seleccion de nombre -->
                         <label>Nombre</label>
-                        <input type="text" id="nombre">
+                        <input type="text" id="nombre_alta">
                     </div>
                     <div class="col-md-5">
                         <!-- Seleccion de titular de catedra -->
                         <label>Titular de Catedra</label>
-                        <input type="text" id="titularDeCatedra">
+                        <input type="text" id="titularDeCatedra_alta">
                     </div>
                     <br>
                     <br>
@@ -195,12 +195,12 @@
                     <div class="col-md-4">
                         <!-- Seleccion de nombre -->
                         <label>Nombre</label>
-                        <input type="text" id="nombre">
+                        <input type="text" id="nombre_baja">
                     </div>
                     <div class="col-md-5">
                         <!-- Seleccion de titular de catedra -->
                         <label>Titular de Catedra</label>
-                        <input type="text" id="titularDeCatedra">
+                        <input type="text" id="titularDeCatedra_modificacion">
                     </div>
                     <br>
                     <br>
