--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -128,8 +128,8 @@
           <div class="col-md-4">
             <!-- Seleccion de Presente -->
             <label class="radioPresente">Presente
-              <input type="radio" name="postage" value="true"> Si
-              <input type="radio" name="postage" value="false"> No</label>
+              <input type="radio" name="postage" value="true" id="radioPresente_si_alta"> Si
+              <input type="radio" name="postage" value="false" id="radioPresente_no_alta"> No</label>
           </div>
         </div>
       </div>
@@ -279,8 +279,8 @@
         <div class="col-md-4">
           <!-- Seleccion de Presente -->
           <label class="radioPresente">Presente
-            <input type="radio" name="postage" value="true"> Si
-            <input type="radio" name="postage" value="false"> No</label>
+            <input type="radio" name="postage" value="true" id="radioPresente_si_modificacion"> Si
+            <input type="radio" name="postage" value="false" id="radioPresente_no_modificacion"> No</label>
         </div>
       </div>
     </div>
