--- a/html/abmMaterias.html
+++ b/html/abmMaterias.html
@@ -80,7 +80,7 @@
           <div class="col-md-4">
             <!-- Input de Materia -->
             <label>Materia</label>
-            <input type="text" id="materia">
+            <input type="text" id="materia_alta">
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
           <div class="col-md-6">
             <!-- Input de Materia -->
             <label>Nuevo Nombre Materia
-              <input type="text" id="nueva_materia">
+              <input type="text" id="nueva_materia_modificacion">
             </label>
           </div>
         </div>
