--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -246,7 +246,7 @@
             },
             "La contrase&ntilde;a debe contener al menos una mayuscula, una minuscula y un numero");
 
-        $("#form_alta, #form_baja #form_modificacion").validate({
+        $("#form_alta, #form_baja, #form_modificacion").validate({
             rules: {
                 apellido: {
                     required: true
